Bug 122695 - Impress: tooltip doesn't stay when hovering over Content Type selector
Summary: Impress: tooltip doesn't stay when hovering over Content Type selector
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.2.0.4 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.3.0 target:6.2.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2019-01-13 18:51 UTC by Mike Kaganski
Modified: 2019-01-16 16:21 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of Content Type selector with a tooltip (5.72 KB, image/png)
2019-01-13 18:51 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2019-01-13 18:51:36 UTC
Created attachment 148294 [details]
Screenshot of Content Type selector with a tooltip

When hovering over Content Type selector (see [1] page 15 "Selecting slide layout", and the attachment), on Windows, a tooltip is shown initially when cursor is over the button's border, but then disappears immediately as cursor moves towards the center of the button. This looks like flickering, and the tooltip is effectively absent (testing on Ubuntu, I couldn't even get the tooltip when over the button edge).

To reproduce:
1. Create a new presentation, dismiss template selector
2. Right-click the first slide at the left-hand Slides pane, and select Layout->Title and 2 Content
3. Try hovering the mouse pointer over the Content Type selectors.

This is a regression in 5.2, and was OK in 5.1. Bibisecting using bibisect-win32-5.2, https://git.libreoffice.org/core/+/681294d55b6b4edcdef08982596cb4bcee32e635 is identified (although it's strange that the commit mentions gtk3 but shows on both Linux and Windows, but it still looks relevant modifying e.g. sd/source/ui/slidesorter/view/SlsToolTip.cxx).

Tested using Version: 6.2.0.2 (x64)
Build ID: 2ce5217b30a543f7666022df50f0562f82be0cff
CPU threads: 12; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: ru-RU (ru_RU); UI-Language: en-US
Calc: CL

and with Version: 6.1.4.2
Build ID: 1:6.1.4-0ubuntu0.18.04.1~lo1
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3;
Locale: en-US (en_US.UTF-8); Calc: group threaded

Caolán: could you please take a look?

[1] https://wiki.documentfoundation.org/images/9/90/GS6006-GettingStartedWithImpress.pdf
Comment 1 Xisco Faulí 2019-01-13 19:43:07 UTC
Reproduced in

Version: 6.3.0.0.alpha0+
Build ID: a5784b7fd63cee073d85b669f745f7f6271ab040
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: x11; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 2 Caolán McNamara 2019-01-14 10:23:06 UTC
seems some other blank tooltip arrives quickly after that tooltip, wiping it out
Comment 3 Commit Notification 2019-01-14 20:56:21 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/423d70f7e45749fad680b3dfe0ccdaed1c1afb19%5E%21

Resolves: tdf#122695 Content Type selector tooltip missing

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Caolán McNamara 2019-01-14 21:24:59 UTC
fixed in master
Comment 5 Mike Kaganski 2019-01-15 06:41:10 UTC
Verified with current master - thanks!
Comment 6 Xisco Faulí 2019-01-15 12:28:54 UTC
Verified in

Version: 6.3.0.0.alpha0+
Build ID: cec7ae9f3c69ecc83462f28fc4987e37dc1b420e
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this!
Comment 7 Commit Notification 2019-01-16 16:21:04 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/95b3a12c5c55cb1696995ccba7eb5f33832fa69f%5E%21

Resolves: tdf#122695 Content Type selector tooltip missing

It will be available in 6.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.