Resolves: tdf#122695 Content Type selector tooltip missing

Change-Id: I0ffe6448d865f569fb59d9facbb1582d2152a9ba