include/svx/svdpntv.hxx
@@ -463,6 +463,7 @@ public:
     virtual bool MouseButtonDown(const MouseEvent& /*rMEvt*/, vcl::Window* /*pWin*/) { return false; }
     virtual bool MouseButtonUp(const MouseEvent& /*rMEvt*/, vcl::Window* /*pWin*/) { return false; }
     virtual bool MouseMove(const MouseEvent& /*rMEvt*/, vcl::Window* /*pWin*/) { return false; }
+    virtual void RequestHelp(const HelpEvent& /*rHEvt*/) {}
     virtual bool Command(const CommandEvent& /*rCEvt*/, vcl::Window* /*pWin*/) { return false; }
 
     void GetAttributes(SfxItemSet& rTargetSet, bool bOnlyHardAttr) const;
