svx/source/svdraw/svdhdl.cxx
@@ -1063,6 +1063,10 @@ void SdrHdl::onMouseEnter(const MouseEvent& /*rMEvt*/)
 {
 }
 
+void SdrHdl::onHelpRequest(const HelpEvent& /*rHEvt*/)
+{
+}
+
 void SdrHdl::onMouseLeave()
 {
 }
